fixed togglemode overlapping

--- a/src/styles/utility_colors.scss
+++ b/src/styles/utility_colors.scss
@@ -55,7 +55,7 @@
   
 }
 .red1{
-  background-color: rgb(252, 112, 112);
+  background-color: rgb(227, 0, 76);
   color: white;
 }
 .orange{
@@ -67,12 +67,12 @@
   color: black;
 }
 .apple{
-  background-color: rgb(121, 0, 0);
+  background-color: rgb(184, 0, 0);
   color: white;
   border-top-left-radius: $indent_3;
 }
 .green{
-  background-color: rgb(117, 227, 142);
+  background-color: rgb(169, 255, 161);
   color: green;
 }
 .blue{
@@ -85,12 +85,12 @@
   color: rgb(0, 0, 0);
 }
 .rose{
-  background-color: rgb(233, 122, 159);
+  background-color: rgb(212, 41, 98);
   border-top-right-radius: $indent_3;
   color: white;
 }
 .violet{
-  background-color: rgb(178, 137, 198);
+  background-color: rgb(197, 103, 205);
   border-bottom-left-radius: $indent_3;
   color: white;
 }
